--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,4 @@
 /storage/app/public/toursImages
 /storage/framework/cache
 /storage/framework/sessions
-/storage/framework/views
+/storage/framework/view
