--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@
 # server.php
 
 
-/storage/logs
-/storage/app/public/toursImages
-/storage/framework/cache
-/storage/framework/sessions
-/storage/framework/view
+/storage/logs/*
+/storage/app/public/toursImages/*
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/view/*
