--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # /vendor
 # /node_modules
 # /public/hot
-# /public/storage
-# /storage/*.key
+/public/storage
+/storage/*.key
 # .cpanel.yml
 .env
 .env.backup
@@ -10,8 +10,8 @@
 # docker-compose.override.yml
 # Homestead.json
 # Homestead.yaml
-# npm-debug.log
-# yarn-error.log
+npm-debug.log
+yarn-error.log
 # /.idea
 # /.vscode
 # /public
